added scss file structure and basic skeleton

--- a/index.html
+++ b/index.html
@@ -3,7 +3,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Dancing+Script:wght@600&family=Nunito:wght@300&family=Open+Sans:wght@300&family=Poppins:wght@300&family=Roboto&family=Roboto+Flex:opsz,wght@8..144,100;8..144,300&display=swap"
+      rel="stylesheet"
+    />
+    <!-- <link rel="stylesheet" href="./styles/app/app.css" /> -->
+    <link rel="stylesheet" href="./styles/home-wrapper/home-wrapper.css" />
+    <link rel="stylesheet" href="./styles/home-navbar/navbar.css" />
+    <link rel="stylesheet" href="./styles/welcome-wrapper/welcome.scss" />
+    <link rel="stylesheet" href="./styles/we-stand-wrapper/we-stand.scss" />
+    <link rel="stylesheet" href="./styles/about-hestia-wrapper/about.scss" />
+    <link rel="stylesheet" href="./styles/blog-wrapper/blog.scss" />
+    <link
+      rel="stylesheet"
+      href="./styles/get-in-touch-wrapper/get-in-touch.scss"
+    />
+    <link rel="stylesheet" href="./styles/home-footer/home-footer.scss" />
     <title>Hestia - WordPress Theme</title>
   </head>
   <body>
