floating body skeleton and nav built out - end of day 1

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <!-- <link rel="stylesheet" href="./styles/app/app.css" /> -->
     <link rel="stylesheet" href="./styles/home-wrapper/home-wrapper.css" />
     <link rel="stylesheet" href="./styles/home-navbar/navbar.css" />
-    <link rel="stylesheet" href="./styles/welcome-wrapper/welcome.scss" />
-    <link rel="stylesheet" href="./styles/we-stand-wrapper/we-stand.scss" />
-    <link rel="stylesheet" href="./styles/about-hestia-wrapper/about.scss" />
-    <link rel="stylesheet" href="./styles/blog-wrapper/blog.scss" />
+    <link rel="stylesheet" href="./styles/welcome-wrapper/welcome.css" />
+    <link rel="stylesheet" href="./styles/we-stand-wrapper/we-stand.css" />
+    <link rel="stylesheet" href="./styles/about-hestia-wrapper/about.css" />
+    <link rel="stylesheet" href="./styles/blog-wrapper/blog.css" />
     <link
       rel="stylesheet"
-      href="./styles/get-in-touch-wrapper/get-in-touch.scss"
+      href="./styles/get-in-touch-wrapper/get-in-touch.css"
     />
-    <link rel="stylesheet" href="./styles/home-footer/home-footer.scss" />
+    <link rel="stylesheet" href="./styles/home-footer/home-footer.css" />
     <title>Hestia - WordPress Theme</title>
   </head>
   <body>
@@ -41,10 +41,12 @@
         </div>
       </div>
       <div class="welcome-wrapper">
-        <div class="wel-header">Welcome to Hestia!</div>
+        <div class="welcome-header">Welcome to Hestia!</div>
         <div class="wel-title">Lorem ipsum dolor sit amet</div>
         <button class="wel-button">SEE MORE</button>
       </div>
+    </div>
+    <div class="floating-body">
       <div class="we-stand-wrapper">
         <div class="we-stand-header">What We stand for</div>
         <div class="block-wrapper">
