added we-stand section styles

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Dancing+Script:wght@600&family=Nunito:wght@300&family=Open+Sans:wght@300&family=Poppins:wght@300&family=Roboto+Flex:opsz,wght@8..144,100;8..144,300&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Dancing+Script:wght@600&family=Nunito:wght@300&family=Open+Sans:wght@300&family=Poppins:wght@300&family=Roboto&family=Roboto+Flex:opsz,wght@8..144,100;8..144,300&display=swap"
       rel="stylesheet"
     />
@@ -13,6 +26,10 @@
     <link rel="stylesheet" href="./styles/home-wrapper/home-wrapper.css" />
     <link rel="stylesheet" href="./styles/home-navbar/navbar.css" />
     <link rel="stylesheet" href="./styles/welcome-wrapper/welcome.css" />
+    <link
+      rel="stylesheet"
+      href="./styles/floating-body-wrapper/floating-body.scss"
+    />
     <link rel="stylesheet" href="./styles/we-stand-wrapper/we-stand.css" />
     <link rel="stylesheet" href="./styles/about-hestia-wrapper/about.css" />
     <link rel="stylesheet" href="./styles/blog-wrapper/blog.css" />
@@ -42,41 +59,45 @@
       </div>
       <div class="welcome-wrapper">
         <div class="welcome-header">Welcome to Hestia!</div>
-        <div class="wel-title">Lorem ipsum dolor sit amet</div>
-        <button class="wel-button">SEE MORE</button>
+        <div class="welcome-title">Lorem ipsum dolor sit amet</div>
+        <button class="welcome-button">
+          <a href="./index.html/we-stand-header"></a> SEE MORE
+        </button>
       </div>
     </div>
     <div class="floating-body">
       <div class="we-stand-wrapper">
-        <div class="we-stand-header">What We stand for</div>
-        <div class="block-wrapper">
-          <div class="cube">Cube</div>
-          <div class="section-title">Responsive</div>
-          <div class="section-words">
-            <div class=""></div>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed<br />
-            sed do eiusmod tempor incididunt ut labore et dolore magna<br />
-            aliqua.
+        <div class="we-stand-header"><h1>What We stand for</h1></div>
+        <div class="we-stand-info">
+          <div class="block-wrapper">
+            <div class="cube"><i class="fa-solid fa-table-cells"></i></div>
+            <div class="section-title">Responsive</div>
+            <div class="section-words">
+              <div class=""></div>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed<br />
+              sed do eiusmod tempor incididunt ut labore et dolore magna<br />
+              aliqua.
+            </div>
           </div>
-        </div>
-        <div class="block-wrapper">
-          <div class="square">square</div>
-          <div class="section-title">Quality</div>
-          <div class="section-words">
-            <div class=""></div>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed<br />
-            sed do eiusmod tempor incididunt ut labore et dolore magna<br />
-            aliqua.
+          <div class="block-wrapper">
+            <div class="square"><i class="fa-solid fa-list"></i></div>
+            <div class="section-title">Quality</div>
+            <div class="section-words">
+              <div class=""></div>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed<br />
+              sed do eiusmod tempor incididunt ut labore et dolore magna<br />
+              aliqua.
+            </div>
           </div>
-        </div>
-        <div class="block-wrapper">
-          <div class="lines">support</div>
-          <div class="section-title">Responsive</div>
-          <div class="section-words">
-            <div class=""></div>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed<br />
-            sed do eiusmod tempor incididunt ut labore et dolore magna<br />
-            aliqua.
+          <div class="block-wrapper">
+            <div class="lines"><i class="fa-solid fa-bars"></i></div>
+            <div class="section-title">Support</div>
+            <div class="section-words">
+              <div class=""></div>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed<br />
+              sed do eiusmod tempor incididunt ut labore et dolore magna<br />
+              aliqua.
+            </div>
           </div>
         </div>
       </div>
