added blog page and styles

--- a/blog.html
+++ b/blog.html
@@ -3,9 +3,180 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Dancing+Script:wght@600&family=Nunito:wght@300&family=Open+Sans:wght@300&family=Poppins:wght@300&family=Roboto+Flex:opsz,wght@8..144,100;8..144,300&family=Roboto+Slab&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Dancing+Script:wght@600&family=Nunito:wght@300&family=Open+Sans:wght@300&family=Poppins:wght@300&family=Roboto+Flex:opsz,wght@8..144,100;8..144,300&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Akshar:wght@300&family=Dancing+Script:wght@600&family=Nunito:wght@300&family=Open+Sans:wght@300&family=Poppins:wght@300&family=Roboto&family=Roboto+Flex:opsz,wght@8..144,100;8..144,300&display=swap"
+      rel="stylesheet"
+    />
+    <!-- <link rel="stylesheet" href="./styles/app/app.css" /> -->
+    <link rel="stylesheet" href="./styles/home-wrapper/home-wrapper.css" />
+    <link rel="stylesheet" href="./styles/home-navbar/navbar.css" />
+    <link
+      rel="stylesheet"
+      href="./styles/blog-page-welcome-wrapper/bp-welcome-wrapper.css"
+    />
+    <link
+      rel="stylesheet"
+      href="./styles/floating-body-wrapper/floating-body.scss"
+    />
+    <link rel="stylesheet" href="./styles/blog-page-body/bp-body.css" />
+    <link rel="stylesheet" href="./styles/home-footer/home-footer.css" />
     <title>Hestia - WordPress Theme</title>
   </head>
   <body>
-    <h1>hello from blog</h1>
+    <div class="home-wrapper">
+      <div class="home-navbar">
+        <div class="hn-left">
+          <div class="hestia"><a href="./index.html">Hestia</a></div>
+        </div>
+        <div class="hn-right">
+          <div class="hn-right-item"><a href="./index.html">HOME</a></div>
+          <div class="hn-right-item">
+            <a href="/blog.html">BLOG</a>
+          </div>
+          <div class="hn-right-item">
+            <a href="/contact.html">CONTACT</a>
+          </div>
+          <button class="more">MORE</button>
+        </div>
+      </div>
+      <div class="welcome-wrapper">
+        <div class="welcome-header">Blog</div>
+      </div>
+    </div>
+    <div class="floating-body">
+      <div class="blog-wrapper">
+        <div class="blog-info-wrapper">
+          <div class="blog-block">
+            <div class="blog-link purple"><a href="#">UNCATEGORIZED</a></div>
+            <div class="blog-title">
+              <a href="#">Worth a Thousand Words</a>
+            </div>
+            <div class="blog-detail">Boat.</div>
+            <div class="blog-author">
+              By <a href="#" class="theme-admin">Theme Admin</a>, 14 years ago
+            </div>
+          </div>
+          <div class="blog-block">
+            <div class="blog-link blue"><a href="#">UNCATEGORIZED</a></div>
+            <div class="blog-title">
+              <a href="#">Elements</a>
+            </div>
+            <div class="blog-detail">
+              The purpose of this HTML is to help determine what default
+              settings are with CSS and to make sure that all possible HTML
+              Elements are included in this HTML so as to not miss any
+              <a href="/contact.html" class="read-more">Read more...</a>
+            </div>
+            <div class="blog-author">
+              By <a href="#" class="theme-admin">Theme Admin</a>, 14 years ago
+            </div>
+          </div>
+          <div class="blog-block">
+            <div class="blog-link orange"><a href="#">UNCATEGORIZED</a></div>
+            <div class="blog-title">
+              <a href="#">More Tags</a>
+            </div>
+            <div class="blog-detail">More of these posts need tags</div>
+            <div class="blog-author">
+              By <a href="#" class="theme-admin">Theme Admin</a>, 14 years ago
+            </div>
+          </div>
+          <div class="blog-block">
+            <div class="blog-link gold"><a href="#">UNCATEGORIZED</a></div>
+            <div class="blog-title">
+              <a href="#">HTML</a>
+            </div>
+            <div class="blog-detail">
+              What HTML tags would you like to see? Let’s start with an
+              unordered list: One Two Three Four And then move on to a more
+              interesting ordered list: one, two<br />
+              buckle my shoe three, four knock at the door Five,
+              <a href="/contact.html" class="read-more">Read more...</a>
+            </div>
+            <div class="blog-author">
+              By <a href="#" class="theme-admin">Theme Admin</a>, 14 years ago
+            </div>
+          </div>
+          <div class="blog-block">
+            <div class="blog-link pink"><a href="#">UNCATEGORIZED</a></div>
+            <div class="blog-title">
+              <a href="#">Links</a>
+            </div>
+            <div class="blog-detail">
+              A few well known WordPress links: WordPress.org, the Codex and the
+              download page.
+            </div>
+            <div class="blog-author">
+              By <a href="#" class="theme-admin">Theme Admin</a>, 14 years ago
+            </div>
+          </div>
+          <div class="blog-block">
+            <div class="blog-link green">
+              <a href="#">FIRST CHILD CATEGORY</a>
+            </div>
+            <div class="blog-title">
+              <a href="#">Category Hierarchy</a>
+            </div>
+            <div class="blog-detail">
+              This post has 4 categories, part of a hierarchy that is 3 deep.
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Fusce
+              euismod commodo ante.<br />
+              Suspendisse potenti. Nunc pellentesque quam vel pede. Ut a lorem
+              non urna molestie euismod. Fusce
+              <a href="/contact.html" class="read-more">Read more...</a>
+            </div>
+            <div class="blog-author">
+              By <a href="#" class="theme-admin">Theme Admin</a>, 14 years ago
+            </div>
+          </div>
+          <div class="blog-block">
+            <div class="blog-link purple"><a href="#">UNCATEGORIZED</a></div>
+            <div class="blog-title">
+              <a href="#">Hello world!</a>
+            </div>
+            <div class="blog-detail">
+              Welcome to WordPress. This is your first post. Edit or delete it,
+              then start blogging!
+            </div>
+            <div class="blog-author">
+              By <a href="#" class="theme-admin">Theme Admin</a>, 14 years ago
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="home-footer">
+        <div class="hf-left">
+          <div class="left-content"><a href="#">ABOUT</a></div>
+          <div class="left-content"><a href="#">PARENT PAGE</a></div>
+        </div>
+        <div class="hf-right">
+          <div class="right-content">Hestia | Developed by</div>
+          <div class="right-content-themelsle">
+            <a href="#">Themelsle</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
