--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
           <div class="hestia"><a href="#">Hestia</a></div>
         </div>
         <div class="hn-right">
-          <div class="hn-right-item"><a href="#">HOME</a></div>
+          <div class="hn-right-item"><a href="./index.html">HOME</a></div>
           <div class="hn-right-item">
-            <a href="/blog.html" target="_blank">BLOG</a>
+            <a href="/blog.html">BLOG</a>
           </div>
           <div class="hn-right-item">
-            <a href="/contact.html" target="_blank">CONTACT</a>
+            <a href="/contact.html">CONTACT</a>
           </div>
           <button class="more">MORE</button>
         </div>
