removed 'more button' added scroll

--- a/blog.html
+++ b/blog.html
@@ -47,17 +47,14 @@
     <div class="home-wrapper">
       <div class="home-navbar">
         <div class="hn-left">
-          <div class="hestia"><a href="./index.html">Hestia</a></div>
+          <div class="hestia"><a href="#">Hestia</a></div>
         </div>
         <div class="hn-right">
           <div class="hn-right-item"><a href="./index.html">HOME</a></div>
-          <div class="hn-right-item">
-            <a href="/blog.html">BLOG</a>
-          </div>
-          <div class="hn-right-item">
-            <a href="/contact.html">CONTACT</a>
-          </div>
-          <button class="more">MORE</button>
+          <div class="hn-right-item"><a href="/blog.html">BLOG</a></div>
+          <div class="hn-right-item"><a href="/contact.html">CONTACT</a></div>
+          <div class="more"><a href="#stand">MORE</a></div>
+          <div class="nav-icon"><i class="fa-solid fa-bars"></i></div>
         </div>
       </div>
       <div class="welcome-wrapper">
