--- a/contact.html
+++ b/contact.html
@@ -44,13 +44,10 @@
       </div>
       <div class="hn-right">
         <div class="hn-right-item"><a href="./index.html">HOME</a></div>
-        <div class="hn-right-item">
-          <a href="/blog.html">BLOG</a>
-        </div>
-        <div class="hn-right-item">
-          <a href="/contact.html">CONTACT</a>
-        </div>
-        <button class="more">MORE</button>
+        <div class="hn-right-item"><a href="/blog.html">BLOG</a></div>
+        <div class="hn-right-item"><a href="/contact.html">CONTACT</a></div>
+        <div class="more"><a href="#stand">MORE</a></div>
+        <div class="nav-icon"><i class="fa-solid fa-bars"></i></div>
       </div>
     </div>
     <iframe src="https://maps.google.com/maps?width=100%25&height=400&hl=en&q=povernei%2020+(My%20Business%20Name)&t=&z=14&ie=UTF8&iwloc=B&output=embed" width="100%" height="400" frameborder="0"></iframe>
