--- a/index.html
+++ b/index.html
@@ -54,13 +54,10 @@
         </div>
         <div class="hn-right">
           <div class="hn-right-item"><a href="./index.html">HOME</a></div>
-          <div class="hn-right-item">
-            <a href="/blog.html">BLOG</a>
-          </div>
-          <div class="hn-right-item">
-            <a href="/contact.html">CONTACT</a>
-          </div>
-          <button class="more">MORE</button>
+          <div class="hn-right-item"><a href="/blog.html">BLOG</a></div>
+          <div class="hn-right-item"><a href="/contact.html">CONTACT</a></div>
+          <div class="more"><a href="#stand">MORE</a></div>
+          <div class="nav-icon"><i class="fa-solid fa-bars"></i></div>
         </div>
       </div>
       <div class="welcome-wrapper">
@@ -72,7 +69,7 @@
       </div>
     </div>
     <div class="floating-body">
-      <div class="we-stand-wrapper">
+      <div class="we-stand-wrapper" id="stand">
         <div class="we-stand-header"><h1>What we stand for</h1></div>
         <div class="we-stand-info">
           <div class="block-wrapper">
